<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:singleLine="true"
            android:text="@string/app_detail_size_name"
            android:textColor="@color/theme_main_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_app_size_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp.6"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/theme_main_text_color"
            android:textSize="28sp"
            tools:text="333.3MB" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:singleLine="true"
            android:text="@string/app_detail_update_time"
            android:textColor="@color/theme_main_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_app_update_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp.6"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/theme_main_text_color"
            android:textSize="28sp"
            tools:text="2202-05-09" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:singleLine="true"
            android:text="@string/app_detail_version_name"
            android:textColor="@color/theme_main_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_app_version_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp.6"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/theme_main_text_color"
            android:textSize="28sp"
            tools:text="8.0.2" />

    </LinearLayout>

</LinearLayout>
